# megaphone

./: .clang-format  .dockerignore  .env  .env.example  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  SPSCQueue.hpp  entrypoint.sh  k.h  megaphone.cpp  trades.cpp  zenohpico.json5
.github/workflows/: ccpp.yml
cmake/: FetchPackages.cmake
responses/: depthL2.json  trade.json
source/flatbuffers/schema/: depthl2.fbs  l2_events.fbs  l3_events.fbs  ticker.fbs  trades.fbs
source/libphone/: libphone.cpp  libphone.hpp
source/libphone/fbhandler/: fbhandler.cpp  fbhandler.hpp
source/libphone/serializer/: serializer.cpp  serializer.hpp
source/libphone/utils/: utils.cpp  utils.hpp
source/megaphone/: main.cpp
source/spscqueue/: SPSCQueue.h
tests/: serializer_test.cpp  temp_test.cpp
